tests/base/invalid/List_CompileFail_3.whiley


void ::main(System.Console sys):
     a2 = [1,2,3]
     y = a2[x]
